# alphadetect

./: .env.example  .gitignore  README.md  pyproject.toml
cli/: detect.py
